--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,25 @@
 	</properties>
 
 	<repositories>
-		<repository>
+<!--		<repository>
 			<id>mm-maven-dependencies</id>
 			<url>http://www.eecs.berkeley.edu/~tjhunter/mm-maven-dependencies/releases</url>
-		</repository>
+		</repository>-->
 	</repositories>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:git:git@github.com:calpath/open-traffic.git</connection>
+    <developerConnection>scm:git:git@github.com:calpath/open-traffic.git</developerConnection>
+    <url>git@github.com:calpath/open-traffic.git</url>
+  </scm>	
 
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -41,13 +54,6 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!-- <plugin> <groupId>org.eclipse.m2e</groupId> <artifactId>lifecycle-mapping</artifactId> 
-					<version>1.0.0</version> <configuration> <lifecycleMappingMetadata> <pluginExecutions> 
-					<pluginExecution> <pluginExecutionFilter> <groupId>org.apache.maven.plugins</groupId> 
-					<artifactId>maven-resources-plugin</artifactId> <versionRange>[2.0,)</versionRange> 
-					<goals> <goal>resources</goal> <goal>testResources</goal> </goals> </pluginExecutionFilter> 
-					<action> <ignore /> </action> </pluginExecution> </pluginExecutions> </lifecycleMappingMetadata> 
-					</configuration> </plugin> -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
@@ -57,6 +63,19 @@
 
 		</pluginManagement>
 		<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
@@ -78,15 +97,6 @@
 					</args>
 				</configuration>
 			</plugin>
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.maven.plugins</groupId> -->
-			<!-- <artifactId>maven-compiler-plugin</artifactId> -->
-			<!-- <version>2.3.2</version> -->
-			<!-- <configuration> -->
-			<!-- <source>1.5</source> -->
-			<!-- <target>1.5</target> -->
-			<!-- </configuration> -->
-			<!-- </plugin> -->
 		</plugins>
 	</build>
 
