--- a/CORE/pom.xml
+++ b/CORE/pom.xml
@@ -12,28 +12,20 @@
 
 
 	<dependencies>
-		<!-- BIG FAT WARNING HERE! The order in which you import postgres and postgis 
-			is important!!! See this email here: http://postgis.refractions.net/pipermail/postgis-users/2005-March/007153.html -->
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgis</groupId>
-			<artifactId>postgis-main</artifactId>
-			<version>1.3.3</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>org.postgis</groupId>
-			<artifactId>postgis-jdbc</artifactId>
-			<version>1.3.3</version>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math</artifactId>
 			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+		<dependency>
+			<groupId>com.codahale</groupId>
+			<artifactId>jerkson_${scala.version}</artifactId>
+			<version>0.5.0</version>
 		</dependency>
 	</dependencies>
 </project>
