--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 	<version>0.1-SNAPSHOT</version>
 
 	<name>Mobile Millennium</name>
+	
+<!-- AVRO PLUGIN INFORMATION
+https://github.com/radlab/SCADS/wiki/Avro-Plugin
+http://code.google.com/p/avro-scala-compiler-plugin/wiki/MavenUsage
+-->
 
 	<!--Setup the SCM using this blog information: http://www.sonatype.com/people/2009/09/maven-tips-and-tricks-using-github/ 
 		https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide 
@@ -31,10 +36,10 @@
     <url>http://repo.codahale.com</url>
   </repository>
 
-<!--		<repository>
-			<id>mm-maven-dependencies</id>
-			<url>http://www.eecs.berkeley.edu/~tjhunter/mm-maven-dependencies/releases</url>
-		</repository>-->
+  <repository>
+    <id>Radlab Repository</id>
+    <url>http://scads.knowsql.org/nexus/content/groups/public/</url>
+  </repository>
 	</repositories>
   <licenses>
     <license>
@@ -56,7 +61,17 @@
 			<artifactId>scala-library</artifactId>
 			<version>${scala.version}</version>
 		</dependency>
-	</dependencies>
+            <dependency>
+              <groupId>edu.berkeley.cs</groupId>
+              <artifactId>avro-plugin_${scala.version}</artifactId>
+              <version>2.1.2-SNAPSHOT</version>
+            </dependency>
+	    <dependency>
+              <groupId>org.apache.avro</groupId>
+              <artifactId>avro</artifactId>
+              <version>1.6.0-SNAPSHOT</version>
+            </dependency>
+             	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -97,6 +112,25 @@
 					</execution>
 				</executions>
 				<configuration>
+          <compilerPlugins>
+            <compilerPlugin>
+              <groupId>edu.berkeley.cs</groupId>
+              <artifactId>avro-plugin_${scala.version}</artifactId>
+              <version>2.1.2-SNAPSHOT</version>
+            </compilerPlugin>
+          </compilerPlugins>
+          <dependencies>
+            <dependency>
+              <groupId>edu.berkeley.cs</groupId>
+              <artifactId>avro-plugin_${scala.version}</artifactId>
+              <version>2.1.2-SNAPSHOT</version>
+            </dependency>
+	    <dependency>
+              <groupId>org.apache.avro</groupId>
+              <artifactId>avro</artifactId>
+              <version>1.6.0-SNAPSHOT</version>
+            </dependency>
+	  </dependencies>
 					<scalaVersion>${scala.version}</scalaVersion>
 					<args>
 						<arg>-make:transitivenocp</arg>
