--- a/pom.xml
+++ b/pom.xml
@@ -36,101 +36,113 @@ http://code.google.com/p/avro-scala-compiler-plugin/wiki/MavenUsage
     <url>http://repo.codahale.com</url>
   </repository>
 
-  <repository>
-    <id>Radlab Repository</id>
-    <url>http://scads.knowsql.org/nexus/content/groups/public/</url>
-  </repository>
-	</repositories>
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <scm>
-    <connection>scm:git:git@github.com:calpath/open-traffic.git</connection>
-    <developerConnection>scm:git:git@github.com:calpath/open-traffic.git</developerConnection>
-    <url>git@github.com:calpath/open-traffic.git</url>
-  </scm>	
 
-	
-	<dependencies>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>${scala.version}</version>
-		</dependency>
-            <dependency>
-              <groupId>edu.berkeley.cs</groupId>
-              <artifactId>avro-plugin_${scala.version}</artifactId>
-              <version>2.1.4-SNAPSHOT</version>
-            </dependency>
-	    <dependency>
-              <groupId>org.apache.avro</groupId>
-              <artifactId>avro</artifactId>
-              <version>1.6.0-SNAPSHOT</version>
-            </dependency>
-             	</dependencies>
+<repository>
+	<id>Radlab Repository</id>
+	<url>http://scads.knowsql.org/nexus/content/groups/public/</url>
+</repository>
+</repositories>
+<licenses>
+	<license>
+		<name>The Apache Software License, Version 2.0</name>
+		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		<distribution>repo</distribution>
+	</license>
+</licenses>
+<scm>
+	<connection>scm:git:git@github.com:calpath/open-traffic.git</connection>
+	<developerConnection>scm:git:git@github.com:calpath/open-traffic.git</developerConnection>
+	<url>git@github.com:calpath/open-traffic.git</url>
+</scm>	
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-				</plugin>
 
-			</plugins>
+<dependencies>
+	<dependency>
+		<groupId>org.scala-lang</groupId>
+		<artifactId>scala-library</artifactId>
+		<version>${scala.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>edu.berkeley.cs</groupId>
+		<artifactId>avro-plugin_${scala.version}</artifactId>
+		<version>2.1.4-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.avro</groupId>
+		<artifactId>avro</artifactId>
+		<version>1.6.0-SNAPSHOT</version>
+	</dependency>
+</dependencies>
 
-		</pluginManagement>
+<build>
+	<pluginManagement>
 		<plugins>
-<!--      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-	<version>1.4</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>-->
 			<plugin>
-				<groupId>net.alchim31.maven</groupId>
-				<artifactId>scala-maven-plugin</artifactId>
-				<version>${scala-maven-plugin.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-          <compilerPlugins>
-            <compilerPlugin>
-              <groupId>edu.berkeley.cs</groupId>
-              <artifactId>avro-plugin_${scala.version}</artifactId>
-              <version>2.1.4-SNAPSHOT</version>
-            </compilerPlugin>
-          </compilerPlugins>
-          <dependencies>
-            <dependency>
-              <groupId>edu.berkeley.cs</groupId>
-              <artifactId>avro-plugin_${scala.version}</artifactId>
-              <version>2.1.2-SNAPSHOT</version>
-            </dependency>
-	    <dependency>
-              <groupId>org.apache.avro</groupId>
-              <artifactId>avro</artifactId>
-              <version>1.6.0-SNAPSHOT</version>
-            </dependency>
-	  </dependencies>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+			</plugin>
+
+		</plugins>
+
+	</pluginManagement>
+	<plugins>
+		<plugin>
+			<groupId>net.alchim31.maven</groupId>
+			<artifactId>scala-maven-plugin</artifactId>
+			<version>${scala-maven-plugin.version}</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>compile</goal>
+						<goal>testCompile</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<compilerPlugins>
+					<compilerPlugin>
+						<groupId>edu.berkeley.cs</groupId>
+						<artifactId>avro-plugin_${scala.version}</artifactId>
+						<version>2.1.4-SNAPSHOT</version>
+					</compilerPlugin>
+					<compilerPlugin>
+						<groupId>org.apache.avro</groupId>
+						<artifactId>avro</artifactId>
+						<version>1.6.0-SNAPSHOT</version>
+					</compilerPlugin>
+					<compilerPlugin>
+						<groupId>org.codehaus.jackson</groupId>
+						<artifactId>jackson-core-asl</artifactId>
+						<version>1.7.3</version>
+					</compilerPlugin>
+					<compilerPlugin>
+						<groupId>org.codehaus.jackson</groupId>
+						<artifactId>jackson-mapper-asl</artifactId>
+						<version>1.7.3</version>
+					</compilerPlugin>
+					<compilerPlugin>
+						<groupId>com.thoughtworks.paranamer</groupId>
+						<artifactId>paranamer</artifactId>
+						<version>2.3</version>
+					</compilerPlugin>
+					<compilerPlugin>
+						<groupId>org.xerial.snappy</groupId>
+						<artifactId>snappy-java</artifactId>
+						<version>1.0.3.2</version>
+						</compilerPlugin>
+					</compilerPlugins>
+					<dependencies>
+						<dependency>
+							<groupId>edu.berkeley.cs</groupId>
+							<artifactId>avro-plugin_${scala.version}</artifactId>
+							<version>2.1.2-SNAPSHOT</version>
+						</dependency>
+						<dependency>
+							<groupId>org.apache.avro</groupId>
+							<artifactId>avro</artifactId>
+							<version>1.6.0-SNAPSHOT</version>
+						</dependency>
+					</dependencies>
 					<scalaVersion>${scala.version}</scalaVersion>
 					<args>
 						<arg>-make:transitivenocp</arg>
