split CORE between CORE and CORE_IO

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
 
 	<modules>
 		<module>CORE</module>
+		<module>CORE_IO</module>
 		<module>NETCONFIG</module>
 		<module>NETCONFIG_IO</module>
 		<module>PATH_INFERENCE</module>
