--- a/CORE_IO/pom.xml
+++ b/CORE_IO/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>CORE</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.berkeley.cs</groupId>
+			<artifactId>avro-plugin_${scala.version}</artifactId>
+			<version>2.1.4-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
