Cleaned the pom files
- added Joel's suggestion regarding the bytecode version
- indentation fixes
- removed the current scala version (2.9.1)

--- a/NETCONFIG_IO/pom.xml
+++ b/NETCONFIG_IO/pom.xml
@@ -26,5 +26,10 @@
 			<artifactId>jerkson_${scala.version}</artifactId>
 			<version>0.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.scalacheck</groupId>
+			<artifactId>scalacheck_${scala.version}</artifactId>
+			<version>1.9</version>
+		</dependency>
 	</dependencies>
 </project>
