--- a/NETCONFIG/pom.xml
+++ b/NETCONFIG/pom.xml
@@ -29,7 +29,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.scopt</groupId>
-			<artifactId>scopt_2.9.1</artifactId>
+			<artifactId>scopt_${scala.version}</artifactId>
 			<version>1.1.3</version>
 		</dependency>
 		<dependency>
