--- a/PATH_INFERENCE/pom.xml
+++ b/PATH_INFERENCE/pom.xml
@@ -34,7 +34,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.scalala</groupId>
-			<artifactId>scalala_2.9.1</artifactId>
+			<artifactId>scalala_${scala.version}</artifactId>
 			<version>1.0.0.RC2</version>
 		</dependency>
 	</dependencies>
