--- a/NETCONFIG/pom.xml
+++ b/NETCONFIG/pom.xml
@@ -18,6 +18,22 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>11.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>hu.kazocsaba.math</groupId>
+			<artifactId>matrix</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<!-- TODO(?) Remove dependencies to I/O libraries. -->
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-lgpl</artifactId>
 			<version>1.9.4</version>
@@ -32,20 +48,16 @@
 			<artifactId>scopt_${scala.version}</artifactId>
 			<version>1.1.3</version>
 		</dependency>
+		<!-- Testing dependencies. -->
 		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>1.6.2</version>
+			<groupId>org.scalacheck</groupId>
+			<artifactId>scalacheck_${scala.version}</artifactId>
+			<version>1.9</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>11.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>hu.kazocsaba.math</groupId>
-			<artifactId>matrix</artifactId>
-			<version>1.1.0</version>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_${scala.version}</artifactId>
+			<version>1.8</version>
 		</dependency>
 	</dependencies>
 
