--- a/NETCONFIG_IO/pom.xml
+++ b/NETCONFIG_IO/pom.xml
@@ -31,5 +31,10 @@
 			<artifactId>scalacheck_${scala.version}</artifactId>
 			<version>1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_${scala.version}</artifactId>
+			<version>1.8</version>
+		</dependency>
 	</dependencies>
 </project>
