--- a/CORE/pom.xml
+++ b/CORE/pom.xml
@@ -17,5 +17,10 @@
 			<artifactId>commons-math</artifactId>
 			<version>2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>11.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
