--- a/CORE/pom.xml
+++ b/CORE/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>CORE</artifactId>
+	<artifactId>CORE_${scala.version}</artifactId>
 	<parent>
 		<groupId>edu.berkeley.path</groupId>
 		<artifactId>bots</artifactId>
@@ -12,6 +12,25 @@
 
 
 	<dependencies>
+		<!-- BIG FAT WARNING HERE! The order in which you import postgres and postgis 
+			is important!!! See this email here: http://postgis.refractions.net/pipermail/postgis-users/2005-March/007153.html -->
+	   <!-- Move these two dependencies to core-io once refactoring is done. -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901-1.jdbc4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgis</groupId>
+			<artifactId>postgis-main</artifactId>
+			<version>1.3.3</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.postgis</groupId>
+			<artifactId>postgis-jdbc</artifactId>
+			<version>1.3.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math</artifactId>
