--- a/NETCONFIG_IO/pom.xml
+++ b/NETCONFIG_IO/pom.xml
@@ -18,7 +18,7 @@
 		</dependency>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>CORE</artifactId>
+			<artifactId>CORE_${scala.version}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
