--- a/pom.xml
+++ b/pom.xml
@@ -123,5 +123,6 @@
 		<module>NETCONFIG_IO</module>
 		<module>PATH_INFERENCE</module>
 		<module>PATH_INFERENCE_IO</module>
+    <module>ARTERIAL</module>
 	</modules>
 </project>
