--- a/ARTERIAL/pom.xml
+++ b/ARTERIAL/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>arterial-${scala.version}</artifactId>
+	<artifactId>arterial_${scala.version}</artifactId>
 	<parent>
 		<groupId>edu.berkeley.path</groupId>
 		<artifactId>bots</artifactId>
