--- a/CORE/src/test/resources/log4j.properties
+++ b/CORE/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Set everything to be logged to the console
-log4j.rootCategory=DEBUG, INFO, WARN, ERROR, console
+log4j.rootLogger=INFO, console
+
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss.SSS} %p %c{1}: %m%n
