--- a/CORE/pom.xml
+++ b/CORE/pom.xml
@@ -22,5 +22,20 @@
 			<artifactId>guava</artifactId>
 			<version>11.0.1</version>
 		</dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.6.1</version>
+    </dependency>
 	</dependencies>
 </project>
