--- a/NETCONFIG/pom.xml
+++ b/NETCONFIG/pom.xml
@@ -9,12 +9,12 @@
 		<version>0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>NETCONFIG</artifactId>
+	<artifactId>netconfig_${scala.version}</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>CORE_${scala.version}</artifactId>
+			<artifactId>core_${scala.version}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -38,7 +38,7 @@
 			<version>1.1.0</version>
 		</dependency>
 		<!-- TODO(?) Remove dependencies to I/O libraries. -->
-		<dependency>
+<!--		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-lgpl</artifactId>
 			<version>1.9.4</version>
@@ -47,7 +47,7 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>1.9.4</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>com.github.scopt</groupId>
 			<artifactId>scopt_${scala.version}</artifactId>
