--- a/NETCONFIG_IO/pom.xml
+++ b/NETCONFIG_IO/pom.xml
@@ -3,22 +3,33 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>NETCONFIG_IO</artifactId>
+	
+	<artifactId>netconfig-io_${scala.version}</artifactId>
+	
 	<parent>
 		<groupId>edu.berkeley.path</groupId>
 		<artifactId>bots</artifactId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>
 
+  <repositories>
+    <!-- We cannot publish to maven central as long as we have external repositories. -->
+    <!-- Would be nice to find a workaround. -->
+    <repository>
+      <id>repo.codahale.com</id>
+      <url>http://repo.codahale.com</url>
+    </repository>
+  </repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>NETCONFIG</artifactId>
+			<artifactId>netconfig_${scala.version.release}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>CORE_${scala.version}</artifactId>
+			<artifactId>core_${scala.version.release}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
