--- a/PATH_INFERENCE/pom.xml
+++ b/PATH_INFERENCE/pom.xml
@@ -9,17 +9,17 @@
 		<version>0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>PATH_INFERENCE</artifactId>
+	<artifactId>path-inference_${scala.version}</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>CORE_${scala.version}</artifactId>
+			<artifactId>core_${scala.version}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>NETCONFIG</artifactId>
+			<artifactId>netconfig_${scala.version}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
