--- a/ARTERIAL/pom.xml
+++ b/ARTERIAL/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>netconfig_${scala.version}</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+    <dependency>
+      <groupId>edu.berkeley.path</groupId>
+      <artifactId>netconfig-io_${scala.version}</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
