--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,15 @@
 		<url>git@github.com:calpath/open-traffic.git</url>
 	</scm>
 
+  <repositories>
+    <!-- We cannot publish to maven central as long as we have external repositories. -->
+    <!-- Would be nice to find a workaround. -->
+    <repository>
+      <id>repo.codahale.com</id>
+      <url>http://repo.codahale.com</url>
+    </repository>
+  </repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -94,6 +103,28 @@
 					</args>
 				</configuration>
 			</plugin>
+			
+          <plugin>
+            <groupId>org.scalastyle</groupId>
+            <artifactId>scalastyle-maven-plugin</artifactId>
+            <version>0.1.0</version>
+            <configuration>
+              <verbose>true</verbose>
+              <failOnViolation>true</failOnViolation>
+              <includeTestSourceDirectory>true</includeTestSourceDirectory>
+              <failOnWarning>false</failOnWarning>
+              <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
+              <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
+              <configLocation>scalastyle_config.xml</configLocation>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>			
 		</plugins>
 	</build>
 
