--- a/NETCONFIG_IO/pom.xml
+++ b/NETCONFIG_IO/pom.xml
@@ -4,7 +4,7 @@
     http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<artifactId>netconfig-io_${scala.version}</artifactId>
+	<artifactId>netconfig-io_${scala.version.release}</artifactId>
 	
 	<parent>
 		<groupId>edu.berkeley.path</groupId>
