removed all scala versioning, much simpler

--- a/ARTERIAL/pom.xml
+++ b/ARTERIAL/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>arterial_${scala.version}</artifactId>
+	<artifactId>arterial</artifactId>
 	<parent>
 		<groupId>edu.berkeley.path</groupId>
 		<artifactId>bots</artifactId>
@@ -14,12 +14,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>core_${scala.version}</artifactId>
+			<artifactId>core</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>netconfig_${scala.version}</artifactId>
+			<artifactId>netconfig</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -30,7 +30,7 @@
 		<!-- Separate later arterial from arterial-io -->
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>netconfig-io_${scala.version}</artifactId>
+			<artifactId>netconfig-io</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
