--- a/PATH_INFERENCE/pom.xml
+++ b/PATH_INFERENCE/pom.xml
@@ -9,17 +9,17 @@
 		<version>0.2-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>path-inference_${scala.version}</artifactId>
+	<artifactId>path-inference</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>core_${scala.version}</artifactId>
+			<artifactId>core</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.berkeley.path</groupId>
-			<artifactId>netconfig_${scala.version}</artifactId>
+			<artifactId>netconfig</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -29,7 +29,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.scalala</groupId>
-			<artifactId>scalala_${scala.version}</artifactId>
+			<artifactId>scalala_2.9.1</artifactId>
 			<version>1.0.0.RC2</version>
 		</dependency>
 	</dependencies>
